# bot

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  analisis_bloqueos.json  build.sh  confirm_live_source.py  cov.json  cov2.json  dataflow_trace.py  diag_bollinger.py  diag_bollinger_v2.py  docker-composee.yml  docker-composs.yml  final_validation.py  go.work  instrument_runtime.py  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py  sitecustomize.py  test_validation.py  validate_real_data.py  verify_cache_data.py  vulture_whitelist.py  whitelist.py
.ropeproject/: history  history.json
aprendizaje/: analisis_operaciones  analisis_resultados.py  aprendizaje_continuo.py  aprendizaje_en_linea.py  entrenador_estrategias.py  gestor_aprendizaje.py  recalibrar_semana.py  reset_pesos.py  rl_env.py  rl_policy.py  train_rl_policy.py
backend/: db.sqlite3  manage.py  requirements.txt
backtesting/: __init__.py  __main__.py  backtest.py  backtest_rapido.py  backtest_ventanas.py  descargar_velas_binance.py  engine.py  grid_search.py  isolation.py  op.py  op_config.py  op_pesos.py  optimizacion.py  optimizador_config.py  optimizador_pesos.py  replay.py  sp_config.py  sp_pesos.py
binance_api/: __init__.py  ccxt_client.py  cliente.py  filters.py  utils.py  websocket.py
core/: alertas.py  (+90 more)
orders_persist_rust/: Cargo.toml  __init__.py
orders_persist_rust/src/: lib.rs
rust_backtesting/: Cargo.toml  __init__.py  build.rs
rust_backtesting/proto/: backtesting.proto
rust_backtesting/src/: lib.rs
(+773 files in other folders)
