[package]
name = "orders_persist_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "orders_persist_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
rusqlite = { version = "0.31", features = ["bundled"] }
parquet = "51"
serde = { version = "1", features = ["derive"] }
serde_json = "1"