[package]
name = "rust_backtesting"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_backtesting"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "backtest_server"
path = "src/bin/server.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"